Added login feature, and user UI

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel public/index.html -p 3000"
+    "dev": "parcel public/index.html --hmr-port 9000 -p 3000 "
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.2.2",
     "assets": "^3.0.1",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "src": "^1.1.2"
